--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Adel",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "morgan": "^1.10.0"
   },
